# routes/api.php
@@ -15,9 +15,16 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::group(['prefix' => 'v1'], function () {
-    Route::get('/users', [\App\Http\Controllers\UserController::class, 'index']);
-    Route::get('/{id_user}/user', [\App\Http\Controllers\UserController::class, 'show']);
-    Route::post('/user', [\App\Http\Controllers\UserController::class, 'store']);
-    Route::patch('/{id_user}/user', [\App\Http\Controllers\UserController::class, 'update']);
-    Route::delete('/{id_user}/user', [\App\Http\Controllers\UserController::class, 'destroy']);
+    Route::post('auth/sign-in', [\App\Http\Controllers\AuthController::class, 'signIn']);
+
+    Route::group(['middleware' => 'auth:sanctum'], function () {
+        Route::post('auth/sign-out', [\App\Http\Controllers\AuthController::class, 'signOut']);
+        Route::group(['prefix' => 'users'], function () {
+            Route::get('/', [\App\Http\Controllers\UserController::class, 'index']);
+            Route::get('/{id_user}', [\App\Http\Controllers\UserController::class, 'show']);
+            Route::post('/', [\App\Http\Controllers\UserController::class, 'store']);
+            Route::patch('/{id_user}', [\App\Http\Controllers\UserController::class, 'update']);
+            Route::delete('/{id_user}', [\App\Http\Controllers\UserController::class, 'destroy']);
+        });
+    });
 });
